addign query to the program
